scss/components/_yota-accessories.scss
.yota-accessories {

  &__small-header {
    font-size: 1em;
    font-family: geometriaLight, sans-serif;
    line-height: get-line-height(16px, 26px);
    color: $main-color2;
    text-align: center;
    margin-top: 0;
    margin-bottom: 52px;
  }

  &__list {
    @include clearfix();
    padding-left: 0;
    margin: 0;
  }

  &__item {
    text-align: center;
    width: 23.6725664%;
    margin-right: 1.7699115%;
    float: left;
    position: relative;
    padding-top: 30px;
    padding-bottom: 30px;
    margin-bottom: 4em;
    box-shadow: 0.391px 0.921px 9px 0px rgba(46, 50, 50, 0.55);
    border-radius: 4px;

    @include breakpoint(medium){
      width: 31%;
      margin-right: 3.3333%;
      margin-bottom: 2em;
    }

    &:nth-child(4n) {
      margin-right: 0;

      @include breakpoint(medium){
        margin-right: 3.3333%;
      }
    }

    &:nth-child(3n){
      @include breakpoint(medium){ 
        margin-right: 0;
      }
    }

    &:before {
      content: '';
      position: absolute;
      top: 40%;
      left: 0;
      right: 0;
      bottom: 0;
      background-color: $additional-green;
      border-radius: 0 0 4px 4px;
    }
  }

  &__img {
    position: relative;
    width: 100%;
    max-width: 282px;
    height: auto;
  }

  &__caption {
    font-size: 1.375em;
    font-family: geometriaRegular, sans-serif;
    font-weight: normal;
    color: $main-color1;
    position: relative;
    margin-bottom: 2em;
    margin-top: 1em;

    @include breakpoint(large){
      font-size: 1.2em;
    }

    @include breakpoint(medium){
      font-size: 1.1em;
    }
  }

  &__link {
    font-size: .75em;
    font-family: geometriaExtraL, sans-serif;
    letter-spacing: .04em;
    color: $main-color1;
    position: relative;
    text-decoration: none;
  }
}

